--- a/src/softwareproject/view/NavPane.form
+++ b/src/softwareproject/view/NavPane.form
@@ -35,8 +35,8 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" max="32767" attributes="0"/>
-                  <Component id="btnSetToDash" pref="164" max="32767" attributes="0"/>
+                  <Component id="btnSetToDash" pref="182" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
