--- a/src/softwareproject/view/TaskForm.form
+++ b/src/softwareproject/view/TaskForm.form
@@ -35,11 +35,6 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane2" min="-2" pref="366" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="366" max="-2" attributes="0"/>
-                          <Component id="lblTaskForm" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblDesc" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblDepend" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="txtTitle" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
@@ -48,19 +43,22 @@
                               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lblAssessment" min="-2" max="-2" attributes="0"/>
-                                  <Component id="cmbAssessment" min="-2" pref="95" max="-2" attributes="0"/>
+                                  <Component id="cmbAssessment" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="txtHours" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="lblHours" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="lblHoursError" max="32767" attributes="0"/>
+                          <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="txtHours" alignment="0" max="32767" attributes="0"/>
+                              <Component id="lblHours" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                              <Component id="jScrollPane2" min="-2" pref="366" max="-2" attributes="0"/>
+                              <Component id="jScrollPane1" min="-2" pref="366" max="-2" attributes="0"/>
+                              <Component id="lblTaskForm" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblDesc" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblDepend" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -68,7 +66,11 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="txtDate" min="-2" pref="117" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="lblDateError" min="-2" pref="155" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblAssessment1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblDateError" min="-2" pref="155" max="-2" attributes="0"/>
+                                  <Component id="cmbType" min="-2" pref="97" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -98,11 +100,14 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="lblHours" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblHours" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblAssessment1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtHours" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblHoursError" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmbType" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="lblDeadline" min="-2" max="-2" attributes="0"/>
@@ -234,12 +239,6 @@
         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtHoursFocusLost"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblHoursError">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Must Be a positive number."/>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="lblReq">
       <Properties>
         <Property name="text" type="java.lang.String" value="Fields Marked with * are required"/>
@@ -264,6 +263,26 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Must Be a Valid date"/>
         <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cmbType">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="4">
+            <StringItem index="0" value="Item 1"/>
+            <StringItem index="1" value="Item 2"/>
+            <StringItem index="2" value="Item 3"/>
+            <StringItem index="3" value="Item 4"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbTypeActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblAssessment1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Task Type"/>
       </Properties>
     </Component>
   </SubComponents>
